# sangam-band

./: .env.example  .gitignore  CONTEXT_HANDOFF.md  Dockerfile.backend  Dockerfile.react  LICENSE  PROJECT_SPEC.md  PROMPTS.md  README.md  agent_config.example.yaml  check_agents.sh  check_room_dump.py  debug_client.py  diag.py  docker-compose.yml  nginx.conf  pyproject.toml  restart_intake.sh  room_dump.py
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: compliance_agent.py  evidence_rag_agent.py  intake_agent.py  patient_profile_agent.py  pkpd_agent.py  structural_agent.py
agents/common/: adapter.py  docking.py  herbs.py  llm.py  pgx.py  pkpd.py  pubchem.py  rag.py  runtime.py
backend/: db.py  interaction_screen.py  job_runner.py  logging_config.py  main.py  nlp_parser.py
data/: case_studies.json  docking_lookup.json  herb_dictionary.json  pgx_rules.json
data/evidence_corpus/: amiodarone_fenugreek.json  amlodipine_arjuna.json  amoxicillin_garlic.json  aspirin_ashwagandha.json  atorvastatin_brahmi.json  cetirizine_ashwagandha.json  ciprofloxacin_licorice.json  (+18 more)
deployment/: cloudbuild.yaml  cloudrun-backend.yaml  cloudrun-frontend.yaml
docs/: architecture.md
frontend/: app.py
orchestrator/: band_client.py  run_case.py
rag/: build_index.py  embeddings.py
scripts/: _build_react.sh  _install_ngrok.sh  _test_backend.sh  daemonize.py  start_agents.sh  start_backend.sh  start_ngrok.sh  start_react.sh  watchdog.sh
tests/: test_all_cases.py  test_docking_lookup.py  test_herbs.py  test_pgx.py  test_pkpd.py  test_pubchem.py  test_rag.py
(+21 files in other folders)
