[project]
name = "sangam-band"
version = "0.1.0"
description = "Project Sangam — Cross-System Polypharmacy Safety Council (Band of Agents Hackathon)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]",
    "langchain-openai",
    "chromadb",
    "scipy",
    "numpy",
    "requests",
    "streamlit",
    "plotly",
    "python-dotenv",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
